Make Julia variables format in variables model more consistent with the other backends

BUG: 377771
FIXED-IN: 18.04.2
Differential Revision: https://phabricator.kde.org/D13290